--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,11 @@
 #
 
 # Name of your site (displayed in the header)
-name: Himanshi Singh
+name: Himanshi Singh 
+RollNo: 21BCP320 
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 3rd year BTech student at PDEU 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
